architecture examples/private-hybrid-network/vnet-nsgs.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": { },
  "variables": {
    "apiVersion": "2016-03-30",
    "location": "[resourceGroup().location]"
  },
  "resources": [
    {
      "name": "web-nsg",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[variables('location')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "properties": {
        "securityRules": [
          {
            "name": "allow-rdp-management",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationPortRange": "3389",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 100
            }
          },
          {
            "name": "allow-http-any",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationPortRange": "80",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 150
            }
          },
          {
            "name": "allow-https-any",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "*",
              "destinationPortRange": "443",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 200
            }
          }
        ]
      }
    },
    {
      "name": "app-nsg",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[variables('location')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "properties": {
        "securityRules": [
          {
            "name": "allow-rdp-management",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationPortRange": "3389",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 100
            }
          },
          {
            "name": "allow-https-web",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.10.0/24",
              "destinationPortRange": "443",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 200
            }
          }
        ]
      }
    },
    {
      "name": "data-nsg",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[variables('location')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "properties": {
        "securityRules": [
          {
            "name": "allow-rdp-management",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationPortRange": "3389",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 100
            }
          },
          {
            "name": "allow-sql-app",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.11.0/24",
              "destinationPortRange": "1433",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 150
            }
          }
        ]
      }
    },
    {
      "name": "dc-nsg",
      "apiVersion": "[variables('apiVersion')]",
      "location": "[variables('location')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "properties": {
        "securityRules": [
          {
            "name": "allow-rdp-management",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.1.0/24",
              "destinationPortRange": "3389",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 100
            }
          },
          {
            "name": "allow-web-any",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.10.0/24",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 150
            }
          },
          {
            "name": "allow-app-any",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.11.0/24",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 200
            }
          },
          {
            "name": "allow-data-any",
            "properties": {
              "protocol": "*",
              "sourcePortRange": "*",
              "sourceAddressPrefix": "10.0.12.0/24",
              "destinationPortRange": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "direction": "Inbound",
              "priority": 250
            }
          }
        ]
      }
    }
  ]
}
